Fix: work category font size fixed for better visibility on moble screens

--- a/src/components/WorksCategory/CategoryItem.scss
+++ b/src/components/WorksCategory/CategoryItem.scss
@@ -3,11 +3,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
+  transition: all 0.3s;
   background-color: rgba(255, 255, 255, 0.04);
   height: 600px;
   border-radius: 22px;
-  transition: all 0.3s;
 
   @media screen and (max-width: 960px) {
     height: 400px;
@@ -16,7 +15,11 @@
   > h4 {
     color: #cc84ff;
     font-size: 4rem;
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
+
+    @media screen and (max-width: 960px) {
+      font-size: 3rem;
+    }
   }
 
   > button {
@@ -26,6 +29,11 @@
     background-color: rgba(255, 255, 255, 0.073);
     border-radius: 12px;
     color: #fff;
-    font-weight: bold;
+    font-weight: 300;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  > button:hover {
+    background-color: #cc84ff;
   }
 }
